# discord-auto-role

./: .env.example  .gitignore  AutoRole.py  README.md  pyproject.toml
src/discord_auto_role/: __main__.py  bot.py  config.py  role_selector.py
src/discord_auto_role/cogs/: __init__.py  auto_role.py
tests/: test_config.py  test_role_resolution.py
