[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-auto-role"
version = "1.0.0"
description = "A modern Discord bot that automatically assigns a role to new guild members."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "KageRyo" }
]
dependencies = [
  "discord.py>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
discord-auto-role = "discord_auto_role.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
